--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.26.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
